--- a/style.css
+++ b/style.css
@@ -30,7 +30,9 @@ body {
   --color-link-hover: #fff;
   --color-content-title-sub: #6b5537;
   color: var(--color-text);
-  background-color: var(--color-bg);
+  background-image: url(./img/img11.jpg);
+
+  background-position: center;
   --cursor-stroke: #6b5537;
   --cursor-fill: none;
   --cursor-stroke-width: 1px;
@@ -276,7 +278,7 @@ a:focus {
   color: var(--color-content-title-sub);
   font-size: 4vw;
   display: block;
-  margin-left: 3vw;
+  margin-left: -3vw;
   line-height: 0.5;
 }
 
